@@ -10,6 +10,9 @@ Release date: 2014-02-23
 Core and Builtins
 -----------------
 
+- Issue #20619: Give the AST nodes of keyword-only arguments a column and line
+  number.
+
 - Issue #20526: Revert changes of issue #19466 which introduces a regression:
   don't clear anymore the state of Python threads early during the Python
   shutdown.
